feat: Sensor data broadcasting based on favorited devices
